--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,8 @@
     grid-auto-columns: 2fr 10fr;
     grid-gap: 10px;  /* distance between elements */
 }
+
+.app-wrapper-content {
+    grid-area: c;
+    background-color: white;
+}
