Before updating CRA, lesson 71 done

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -5,3 +5,13 @@
 .descriptionBlock {
     padding: 10px;
 }
+
+.tipicalDiv {
+    padding: 20px;
+}
+
+.fullName {
+    padding: 20px;
+    font-weight: bold;
+    font-size: larger;
+}
